@@ -6,9 +6,6 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.scheduling.annotation.EnableAsync;
 
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-
 /**
  * @author xuweizhi
  * @since 2019/06/28 13:43
@@ -20,31 +17,31 @@ import java.lang.reflect.Method;
 public class DemoApplication {
 
     public static void main(String[] args) {
-        disableAccessWarnings();
+//        disableAccessWarnings();
         SpringApplication.run(DemoApplication.class, args);
     }
 
 
-    /**
-     * 忽略非法反射警告  适用于jdk11
-     */
-    @SuppressWarnings("unchecked")
-    private static void disableAccessWarnings() {
-        try {
-            Class unsafeClass = Class.forName("sun.misc.Unsafe");
-            Field field = unsafeClass.getDeclaredField("theUnsafe");
-            field.setAccessible(true);
-            Object unsafe = field.get(null);
-
-            Method putObjectVolatile = unsafeClass.getDeclaredMethod("putObjectVolatile", Object.class, long.class, Object.class);
-            Method staticFieldOffset = unsafeClass.getDeclaredMethod("staticFieldOffset", Field.class);
-
-            Class loggerClass = Class.forName("jdk.internal.module.IllegalAccessLogger");
-            Field loggerField = loggerClass.getDeclaredField("logger");
-            Long offset = (Long) staticFieldOffset.invoke(unsafe, loggerField);
-            putObjectVolatile.invoke(unsafe, loggerClass, offset, null);
-        } catch (Exception ignored) {
-        }
-    }
+//    /**
+//     * 忽略非法反射警告  适用于jdk11
+//     */
+//    @SuppressWarnings("unchecked")
+//    private static void disableAccessWarnings() {
+//        try {
+//            Class unsafeClass = Class.forName("sun.misc.Unsafe");
+//            Field field = unsafeClass.getDeclaredField("theUnsafe");
+//            field.setAccessible(true);
+//            Object unsafe = field.get(null);
+//
+//            Method putObjectVolatile = unsafeClass.getDeclaredMethod("putObjectVolatile", Object.class, long.class, Object.class);
+//            Method staticFieldOffset = unsafeClass.getDeclaredMethod("staticFieldOffset", Field.class);
+//
+//            Class loggerClass = Class.forName("jdk.internal.module.IllegalAccessLogger");
+//            Field loggerField = loggerClass.getDeclaredField("logger");
+//            Long offset = (Long) staticFieldOffset.invoke(unsafe, loggerField);
+//            putObjectVolatile.invoke(unsafe, loggerClass, offset, null);
+//        } catch (Exception ignored) {
+//        }
+//    }
 
 }
